--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,8 @@
 {
-    "short_name": "",
-    "name": "",
+    "short_name": "URLShortener",
+    "name": "URLShortener by Emil Öhman",
     "start_url": "/",
-    "background_color": "#000000",
+    "background_color": "#ffffff",
     "display": "standalone",
-    "theme_color": "#000000",
-    "icons": [
-        {
-            "src": "",
-            "type": "",
-            "sizes": ""
-        }
-    ]
+    "theme_color": "#ffffff"
 }
